# swcps2024

./: README.md
additionally/: Berkeley_sockets.txt
ct/ct__10_2/: sembuf_example__child.c  sembuf_example__parent.c
ct/ct__10_3/: mutex_thread_example__posix.c  thread_example__posix.c
ct/ct__10_4/: thread_example__boost.cpp
ct/ct__5_2/: child.c
ct/ct__6_2/: parent.c
ct/ct__7_2/: usesig.c
ct/ct__8_2/: mknod_example.c  pipe_example.c
ct/ct__9_2/: msgget_example.c
ct/ct__9_3/: shmat_example__child.c  shmat_example__parent.c
ct__5_2/: child.c
hw/hw__1/: link2GTKWave.txt  link2VideoInstructionsForPrepareVisualStudioCMake.txt  link2VideoInstructionsForUse.txt
hw/hw__1(4 hours)/8 SpringMVCandHibernate (task)/: Інформація до завдань №6 та №7.txt
hw/hw__1(4 hours)/8 SpringMVCandHibernate (task)/app_ct10/src/main/java/org/eom/cscad/ct10/dao/: PersonDAO.java
hw/hw__1(4 hours)/8 SpringMVCandHibernate (task)/app_ct10/src/main/webapp/WEB-INF/: web.xml
hw/hw__1(4 hours)/8 SpringMVCandHibernate (task)/app_ct10b/src/main/java/org/eom/cscad/ct10/: PersonController.java
hw/hw__1(4 hours)/8 SpringMVCandHibernate (task)/app_ct10b/src/main/java/org/eom/cscad/ct10/dao/: PersonDAOImpl.java
hw/hw__1(4 hours)/8 SpringMVCandHibernate (task)/app_ct10b2/src/main/java/org/eom/cscad/ct10/service/: PersonService.java
hw/hw__1/ex_t7 (wthout lib!, add SystemC lib and use patch)/: CMakeLists.txt  addsub.cpp  addsub.h  calc.h  main.cpp  numgen.h
hw/hw__1/others/OLD_code(need patching)/: link2patch.txt  pipe.rar
hw/hw__2(4 hours)/: link2VideoInstructionsForUse.txt  links2VideoInstructionsForPrepare.txt
hw/hw__2(4 hours)/8 SpringMVCandHibernate (task)/app_ct10/src/main/java/org/eom/cscad/ct10/dao/: PersonDAOImpl.java
hw/hw__2(4 hours)/8 SpringMVCandHibernate (task)/app_ct10/src/main/java/org/eom/cscad/ct10/model/: Person.java
hw/hw__2(4 hours)/8 SpringMVCandHibernate (task)/app_ct10/src/main/java/org/eom/cscad/ct10/service/: PersonServiceImpl.java
hw/hw__2(4 hours)/8 SpringMVCandHibernate (task)/app_ct10/src/main/resources/: log4j.xml
hw/hw__2(4 hours)/8 SpringMVCandHibernate (task)/app_ct10/src/main/webapp/WEB-INF/spring/appServlet/: servlet-context.xml
hw/hw__2(4 hours)/8 SpringMVCandHibernate (task)/app_ct10b/: pom.xml
hw/hw__2(4 hours)/8 SpringMVCandHibernate (task)/app_ct10b/src/main/java/org/eom/cscad/ct10/model/: Person.java
hw/hw__2(4 hours)/8 SpringMVCandHibernate (task)/app_ct10b/src/main/webapp/WEB-INF/spring/appServlet/: servlet-context.xml
hw/hw__2(4 hours)/8 SpringMVCandHibernate (task)/app_ct10b2/src/main/java/org/eom/cscad/ct10/dao/: PersonDAOImpl.java
hw__1/ex_t7 (wthout lib!, add SystemC lib and use patch)/: CMakeSettings.json  calc.cpp  display.cpp  display.h  numgen.cpp
swcps-exam-2024-2025/linux-commands/: geeksforgeeks.txt
