cmake_minimum_required (VERSION 3.8)
project ("CMakeSystemCProject")
include_directories("src") 
add_executable ("CMakeSystemCProject" 
    # project h- and cpp-files
    "numgen.h"
    "addsub.h"
    "calc.h"
    "display.h"
    "numgen.cpp"
    "addsub.cpp"
    "calc.cpp"
    "display.cpp"
    "main.cpp"
    
    # SystemC 1.0 h-files
    "src/numeric_bit/fx/fx.h"
    "src/numeric_bit/fx/scfx_ieee.h"
    "src/numeric_bit/fx/scfx_mant.h"
    "src/numeric_bit/fx/scfx_other_defs.h"
    "src/numeric_bit/fx/scfx_params.h"
    "src/numeric_bit/fx/scfx_pow10.h"
    "src/numeric_bit/fx/scfx_rep.h"
    "src/numeric_bit/fx/scfx_string.h"
    "src/numeric_bit/fx/scfx_utils.h"
    "src/numeric_bit/fx/sc_context.h"
    "src/numeric_bit/fx/sc_fix.h"
    "src/numeric_bit/fx/sc_fixed.h"
    "src/numeric_bit/fx/sc_fxcast_switch.h"
    "src/numeric_bit/fx/sc_fxdefs.h"
    "src/numeric_bit/fx/sc_fxnum.h"
    "src/numeric_bit/fx/sc_fxnum_bitref.h"
    "src/numeric_bit/fx/sc_fxnum_subref.h"
    "src/numeric_bit/fx/sc_fxtype_params.h"
    "src/numeric_bit/fx/sc_fxval.h"
    "src/numeric_bit/fx/sc_report.h"
    "src/numeric_bit/fx/sc_report_handler.h"
    "src/numeric_bit/fx/sc_ufix.h"
    "src/numeric_bit/fx/sc_ufixed.h"
    "src/numeric_bit/numeric_bit.h"
    "src/numeric_bit/sc_bigint.h"
    "src/numeric_bit/sc_biguint.h"
    "src/numeric_bit/sc_int.h"
    "src/numeric_bit/sc_int32.h"
    "src/numeric_bit/sc_int32_defs.h"
    "src/numeric_bit/sc_int_defs.h"
    "src/numeric_bit/sc_nbdefs.h"
    "src/numeric_bit/sc_nbexterns.h"
    "src/numeric_bit/sc_nbutils.h"
    "src/numeric_bit/sc_nbwrite.h"
    "src/numeric_bit/sc_signed.h"
    "src/numeric_bit/sc_uint.h"
    "src/numeric_bit/sc_uint32.h"
    "src/numeric_bit/sc_uint32_defs.h"
    "src/numeric_bit/sc_uint_defs.h"
    "src/numeric_bit/sc_unsigned.h"
    "src/sc_2d.h"
    "src/sc_aproc.h"
    "src/sc_array.h"
    "src/sc_array_concat.h"
    "src/sc_async.h"
    "src/sc_bit.h"
    "src/sc_bool_vector.h"
    "src/sc_bv.h"
    "src/sc_bvrep.h"
    "src/sc_channel.h"
    "src/sc_channel_array.h"
    "src/sc_clock.h"
    "src/sc_clock_int.h"
    "src/sc_cmnhdr.h"
    "src/sc_constants.h"
    "src/sc_context_switch.h"
    "src/sc_dump.h"
    "src/sc_err_handler.h"
    "src/sc_except.h"
    "src/sc_exception.h"
    "src/sc_externs.h"
    "src/sc_hash.h"
    "src/sc_helpers.h"
    "src/sc_isdb_trace.h"
    "src/sc_lambda.h"
    "src/sc_list.h"
    "src/sc_logic.h"
    "src/sc_logic_vector.h"
    "src/sc_lv.h"
    "src/sc_macros.h"
    "src/sc_macros_int.h"
    "src/sc_measure.h"
    "src/sc_mempool.h"
    "src/sc_module.h"
    "src/sc_module_int.h"
    "src/sc_module_name.h"
    "src/sc_module_prm.h"
    "src/sc_object.h"
    "src/sc_object_manager.h"
    "src/sc_old.h"
    "src/sc_polarity.h"
    "src/sc_port.h"
    "src/sc_port_clk.h"
    "src/sc_port_manager.h"
    "src/sc_port_sc_bit.h"
    "src/sc_pq.h"
    "src/sc_process.h"
    "src/sc_process_int.h"
    "src/sc_ptr.h"
    "src/sc_reslv.h"
    "src/sc_reslv_vector.h"
    "src/sc_resolved.h"
    "src/sc_resolved_array.h"
    "src/sc_sensitive.h"
    "src/sc_signal.h"
    "src/sc_signal_array.h"
    "src/sc_signal_delay.h"
    "src/sc_signal_deval.h"
    "src/sc_signal_optimize.h"
    "src/sc_signal_rv.h"
    "src/sc_signal_sc_bit.h"
    "src/sc_simcontext.h"
    "src/sc_simcontext_int.h"
    "src/sc_stl.h"
    "src/sc_string.h"
    "src/sc_sync.h"
    "src/sc_templ.h"
    "src/sc_trace.h"
    "src/sc_vcd_trace.h"
    "src/sc_vector.h"
    "src/sc_ver.h"
    "src/sc_wait.h"
    "src/sc_wif_trace.h"
    "src/sc_write_macros.h"
    "src/systemc.h"
    
    # SystemC 1.0 cpp-files
    "src/numeric_bit/fx/scfx_mant.cpp"
    "src/numeric_bit/fx/scfx_pow10.cpp"
    "src/numeric_bit/fx/scfx_rep.cpp"
    "src/numeric_bit/fx/scfx_utils.cpp"
    "src/numeric_bit/fx/sc_fix.cpp"
    "src/numeric_bit/fx/sc_fxcast_switch.cpp"
    "src/numeric_bit/fx/sc_fxdefs.cpp"
    "src/numeric_bit/fx/sc_fxnum.cpp"
    "src/numeric_bit/fx/sc_fxnum_bitref.cpp"
    "src/numeric_bit/fx/sc_fxnum_subref.cpp"
    "src/numeric_bit/fx/sc_fxtype_params.cpp"
    "src/numeric_bit/fx/sc_fxval.cpp"
    "src/numeric_bit/fx/sc_report.cpp"
    "src/numeric_bit/fx/sc_report_handler.cpp"
    "src/numeric_bit/fx/sc_ufix.cpp"
    "src/numeric_bit/sc_int32_mask.cpp"
    "src/numeric_bit/sc_int64_io.cpp"
    "src/numeric_bit/sc_int64_mask.cpp"
    "src/numeric_bit/sc_nbassign.cpp"
    "src/numeric_bit/sc_nbexterns.cpp"
    "src/numeric_bit/sc_nbutils.cpp"
    "src/numeric_bit/sc_nbwrite.cpp"
    "src/numeric_bit/sc_signed.cpp"
    "src/numeric_bit/sc_unsigned.cpp"
    "src/sc_aproc.cpp"
    "src/sc_aproc_process.cpp"
    "src/sc_array.cpp"
    "src/sc_array_concat.cpp"
    "src/sc_async.cpp"
    "src/sc_async_process.cpp"
    "src/sc_bit.cpp"
    "src/sc_bool_vector.cpp"
    "src/sc_bv.cpp"
    "src/sc_channel_array.cpp"
    "src/sc_clock.cpp"
    "src/sc_context_switch.cpp"
    "src/sc_dump.cpp"
    "src/sc_err_handler.cpp"
    "src/sc_exception.cpp"
    "src/sc_hash.cpp"
    "src/sc_lambda.cpp"
    "src/sc_list.cpp"
    "src/sc_logic.cpp"
    "src/sc_logic_vector.cpp"
    "src/sc_lv.cpp"
    "src/sc_main.cpp"
    "src/sc_measure.cpp"
    "src/sc_mempool.cpp"
    "src/sc_module.cpp"
    "src/sc_module_name.cpp"
    "src/sc_module_prm.cpp"
    "src/sc_object.cpp"
    "src/sc_object_manager.cpp"
    "src/sc_port.cpp"
    "src/sc_port_manager.cpp"
    "src/sc_pq.cpp"
    "src/sc_reslv.cpp"
    "src/sc_reslv_vector.cpp"
    "src/sc_sensitive.cpp"
    "src/sc_signal.cpp"
    "src/sc_signal_array.cpp"
    "src/sc_signal_edgy.cpp"
    "src/sc_signal_optimize.cpp"
    "src/sc_signal_rv.cpp"
    "src/sc_simcontext.cpp"
    "src/sc_string.cpp"
    "src/sc_sync_noopt.cpp"
    "src/sc_sync_opt.cpp"
    "src/sc_sync_process.cpp"
    "src/sc_trace.cpp"
    "src/sc_vcd_trace.cpp"
    "src/sc_vector.cpp"
    "src/sc_ver.cpp"
    "src/sc_wait.cpp"
    "src/sc_wif_trace.cpp"
)
